--- a/google_app/app.yaml
+++ b/google_app/app.yaml
@@ -1,4 +1,4 @@
-application: socialadhemargo
+application: financeoverview 
 version: 1
 runtime: go
 api_version: 2
@@ -7,5 +7,3 @@ handlers:
 - url: /api/.*
   script: _go_app
 
-- url: /
-  static_dir: static_html
